--- a/ddf/vehicle/index.html
+++ b/ddf/vehicle/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta name="Author" content="peter kriens"/>
 		<title>VEG Managed Objects</title>
 		<link rel="stylesheet" href="/osgi/osgi.css" type="text/css"/>
