--- a/org.osgi.util.tracker/src/org/osgi/util/tracker/package.html
+++ b/org.osgi.util.tracker/src/org/osgi/util/tracker/package.html
@@ -1,10 +1,10 @@
 <!-- $Id$ -->
 <BODY>
-<p>Service Tracker Package Version 1.3.
+<p>Tracker Package Version 1.4.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.util.tracker; version=1.3
+Import-Package: org.osgi.util.tracker; version=1.4
 </pre>
 </BODY>
