Update to RFC 126

--- a/org.osgi.framework/src/org/osgi/framework/hooks/service/package.html
+++ b/org.osgi.framework/src/org/osgi/framework/hooks/service/package.html
@@ -1,4 +1,4 @@
-<!-- $Date: 2007-08-09 21:17:58 -0400 (Thu, 09 Aug 2007) $ -->
+<!-- $Date$ -->
 <BODY>
 <p>Framework Service Registry Hooks Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
