--- a/org.osgi.framework/src/org/osgi/framework/boot/package.html
+++ b/org.osgi.framework/src/org/osgi/framework/boot/package.html
@@ -1,4 +1,4 @@
-<!-- $Date: 2007-08-10 03:17:58 +0200 (Fri, 10 Aug 2007) $ -->
+<!-- $Date$ -->
 <BODY>
 <p>Framework Boot Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
