fix properties and copyright date

--- a/org.osgi.service.threadio/src/org/osgi/service/threadio/package.html
+++ b/org.osgi.service.threadio/src/org/osgi/service/threadio/package.html
@@ -1,4 +1,4 @@
-<!-- $Date: 2007-08-10 03:17:58 +0200 (Fri, 10 Aug 2007) $ -->
+<!-- $Date$ -->
 <BODY>
 <p>Thread IO Package Version 1.0.
 <p>The purpose of this package is to provide thread based system IO. This service allows a unique 
