--- a/org.osgi.service.command/src/org/osgi/service/command/package.html
+++ b/org.osgi.service.command/src/org/osgi/service/command/package.html
@@ -1,4 +1,4 @@
-<!-- $Date: 2007-08-10 03:17:58 +0200 (Fri, 10 Aug 2007) $ -->
+<!-- $Date$ -->
 <BODY>
 <p>Command Package Version 1.0.
 <p>The purpose of this package is to provide access to a script language processor.  
