--- a/org.osgi.framework/src/org/osgi/framework/launch/package.html
+++ b/org.osgi.framework/src/org/osgi/framework/launch/package.html
@@ -1,11 +1,11 @@
 <!-- $Date$ -->
 <BODY>
-<p>Framework Boot Package Version 1.0.
+<p>Framework Launch Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.framework.boot;version=1.0
+Import-Package: org.osgi.framework.launch;version=1.0
 </pre>
 </BODY>
 
