set svn properties

--- a/org.osgi.service.framework/src/org/osgi/service/framework/package.html
+++ b/org.osgi.service.framework/src/org/osgi/service/framework/package.html
@@ -1,4 +1,4 @@
-<!-- $Revision: 5654 $ -->
+<!-- $Revision$ -->
 <BODY>
 <p>Framework service Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
