Move multiplexer classes into their own project

--- a/org.osgi.multiplexer/src/org/osgi/multiplexer/package.html
+++ b/org.osgi.multiplexer/src/org/osgi/multiplexer/package.html
@@ -5,7 +5,7 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.framework.multiplexer;version=1.0
+Import-Package: org.osgi.multiplexer;version=1.0
 </pre>
 </BODY>
 
