--- a/org.osgi.multiplexer/src/org/osgi/multiplexer/package.html
+++ b/org.osgi.multiplexer/src/org/osgi/multiplexer/package.html
@@ -1,4 +1,4 @@
-<!-- $Revision: 6156 $ -->
+<!-- $Revision$ -->
 <BODY>
 <p>Framework multiplexer Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
