update (or add) package.html example import-package statement to use version range

--- a/info.dmtree/src/info/dmtree/notification/package.html
+++ b/info.dmtree/src/info/dmtree/notification/package.html
@@ -8,6 +8,6 @@ Permission classes are provided by the <code>info.dmtree.security</code> package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: info.dmtree.notification;version=1.0
+Import-Package: info.dmtree.notification;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
