--- a/info.dmtree/src/info/dmtree/package.html
+++ b/info.dmtree/src/info/dmtree/package.html
@@ -11,6 +11,6 @@ management servers can be sent using the interfaces in the
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: info.dmtree;version=1.0
+Import-Package: info.dmtree;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
