--- a/info.dmtree/src/info/dmtree/registry/package.html
+++ b/info.dmtree/src/info/dmtree/registry/package.html
@@ -10,6 +10,6 @@ service implementations.
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: info.dmtree.registry;version=1.0
+Import-Package: info.dmtree.registry;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
