--- a/info.dmtree/src/info/dmtree/spi/package.html
+++ b/info.dmtree/src/info/dmtree/spi/package.html
@@ -8,6 +8,6 @@ users of the <code>DmtAdmin</code> interface do not interact directly with these
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: info.dmtree.spi;version=1.0
+Import-Package: info.dmtree.spi;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
