--- a/org.osgi.service.application/src/org/osgi/service/application/package.html
+++ b/org.osgi.service.application/src/org/osgi/service/application/package.html
@@ -5,7 +5,7 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.application; version=1.1
+Import-Package: org.osgi.service.application; version=&quot;[1.1,2.0)&quot;
 </pre>
 </BODY>
 
