--- a/org.osgi.service.cm/src/org/osgi/service/cm/package.html
+++ b/org.osgi.service.cm/src/org/osgi/service/cm/package.html
@@ -5,7 +5,7 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.cm; version=1.2
+Import-Package: org.osgi.service.cm; version=&quot;[1.2,2.0)&quot;
 </pre>
 </BODY>
 
