--- a/org.osgi.service.threadio/src/org/osgi/service/threadio/package.html
+++ b/org.osgi.service.threadio/src/org/osgi/service/threadio/package.html
@@ -7,7 +7,7 @@ Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.threadio; version=1.0
+Import-Package: org.osgi.service.threadio; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
 
