--- a/org.osgi.service.webapplication/src/org/osgi/service/webapplication/package.html
+++ b/org.osgi.service.webapplication/src/org/osgi/service/webapplication/package.html
@@ -5,7 +5,7 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.webapplication; version=1.0
+Import-Package: org.osgi.service.webapplication; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
 
