--- a/org.osgi.util.tracker/src/org/osgi/util/tracker/package.html
+++ b/org.osgi.util.tracker/src/org/osgi/util/tracker/package.html
@@ -5,6 +5,6 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.util.tracker; version=1.4
+Import-Package: org.osgi.util.tracker; version=&quot;[1.4,2.0)&quot;
 </pre>
 </BODY>
