--- a/info.dmtree/src/info/dmtree/notification/spi/package.html
+++ b/info.dmtree/src/info/dmtree/notification/spi/package.html
@@ -10,6 +10,6 @@ package.
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: info.dmtree.notification.spi;version=1.0
+Import-Package: info.dmtree.notification.spi;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
