--- a/info.dmtree/src/info/dmtree/security/package.html
+++ b/info.dmtree/src/info/dmtree/security/package.html
@@ -7,6 +7,6 @@ Management API in environments that support the Java 2 security model.
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: info.dmtree.security;version=1.0
+Import-Package: info.dmtree.security;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
