--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/convert/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/convert/package.html
@@ -1,10 +1,11 @@
-<!-- $Revision$ -->
+<!-- $Revision: 5654 $ -->
 <BODY>
-<p>Provisioning Package Version 1.2.
+<p>Blueprint Conversion Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.provisioning; version=&quot;[1.2,2.0)&quot;
+Import-Package: org.osgi.service.blueprint.convert; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
+
