--- a/org.osgi.service.command/src/org/osgi/service/command/package.html
+++ b/org.osgi.service.command/src/org/osgi/service/command/package.html
@@ -6,7 +6,7 @@ Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.command; version=1.0
+Import-Package: org.osgi.service.command; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
 
