--- a/org.osgi.service.condpermadmin/src/org/osgi/service/condpermadmin/package.html
+++ b/org.osgi.service.condpermadmin/src/org/osgi/service/condpermadmin/package.html
@@ -2,9 +2,9 @@
 <BODY>
 <p>Conditional Permission Admin Package Version 1.1.
 <p>Bundles wishing to use this package must list the package
-in the <TT>Import-Package</TT> header of the bundle's manifest.
+in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.condpermadmin; version=1.1
+Import-Package: org.osgi.service.condpermadmin; version=&quot;[1.1,2.0)&quot;
 </pre>
 </BODY>
