--- a/org.osgi.service.deploymentadmin/src/org/osgi/service/deploymentadmin/package.html
+++ b/org.osgi.service.deploymentadmin/src/org/osgi/service/deploymentadmin/package.html
@@ -2,9 +2,9 @@
 <BODY>
 <p>Deployment Admin Package Version 1.1.
 <p>Bundles wishing to use this package must list the package
-in the <TT>Import-Package</TT> header of the bundle's manifest.
+in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.deploymentadmin; version=1.1
+Import-Package: org.osgi.service.deploymentadmin; version=&quot;[1.1,2.0)&quot;
 </pre>
 </BODY>
