--- a/org.osgi.service.deploymentadmin/src/org/osgi/service/deploymentadmin/spi/package.html
+++ b/org.osgi.service.deploymentadmin/src/org/osgi/service/deploymentadmin/spi/package.html
@@ -3,10 +3,10 @@
 <p>Deployment Admin SPI Package Version 1.0.
 The SPI is used by Resource Processors.
 <p>Bundles wishing to use this package must list the package
-in the <TT>Import-Package</TT> header of the bundle's manifest.
+in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.deploymentadmin.spi; version=1.0
+Import-Package: org.osgi.service.deploymentadmin.spi; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
 </BODY>
