--- a/org.osgi.service.io/src/org/osgi/service/io/package.html
+++ b/org.osgi.service.io/src/org/osgi/service/io/package.html
@@ -2,9 +2,9 @@
 <BODY>
 <p>IO Connector Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
-in the <TT>Import-Package</TT> header of the bundle's manifest.
+in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.io; version=1.0, javax.microedition.io
+Import-Package: org.osgi.service.io; version=&quot;[1.0,2.0)&quot;, javax.microedition.io
 </pre>
 </BODY>
