--- a/org.osgi.service.metatype/src/org/osgi/service/metatype/package.html
+++ b/org.osgi.service.metatype/src/org/osgi/service/metatype/package.html
@@ -2,10 +2,10 @@
 <BODY>
 <p>Metatype Package Version 1.1.
 <p>Bundles wishing to use this package must list the package
-in the <TT>Import-Package</TT> header of the bundle's manifest.
+in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.metatype; version=1.1
+Import-Package: org.osgi.service.metatype; version=&quot;[1.1,2.0)&quot;
 </pre>
 </BODY>
 
