--- a/org.osgi.service.monitor/src/org/osgi/service/monitor/package.html
+++ b/org.osgi.service.monitor/src/org/osgi/service/monitor/package.html
@@ -2,9 +2,9 @@
 <BODY>
 <p>Monitor Admin Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
-in the <TT>Import-Package</TT> header of the bundle's manifest.
+in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.monitor; version=1.0
+Import-Package: org.osgi.service.monitor; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
