--- a/org.osgi.service.upnp/src/org/osgi/service/upnp/package.html
+++ b/org.osgi.service.upnp/src/org/osgi/service/upnp/package.html
@@ -5,6 +5,6 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.upnp; version=1.1
+Import-Package: org.osgi.service.upnp; version=&quot;[1.1,2.0)&quot;
 </pre>
 </BODY>
