--- a/org.osgi.util.measurement/src/org/osgi/util/measurement/package.html
+++ b/org.osgi.util.measurement/src/org/osgi/util/measurement/package.html
@@ -5,6 +5,6 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.util.measurement; version=1.0
+Import-Package: org.osgi.util.measurement; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
