--- a/org.osgi.util.xml/src/org/osgi/util/xml/package.html
+++ b/org.osgi.util.xml/src/org/osgi/util/xml/package.html
@@ -5,6 +5,6 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.util.xml; version=1.0
+Import-Package: org.osgi.util.xml; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
