bug 1040: rename PublishHook to EventHook tidy up javadoc

--- a/org.osgi.framework/src/org/osgi/framework/hooks/service/package.html
+++ b/org.osgi.framework/src/org/osgi/framework/hooks/service/package.html
@@ -1,6 +1,6 @@
 <!-- $Revision$ -->
 <BODY>
-<p>Framework Service Registry Hooks Package Version 1.0.
+<p>Framework Service Hooks Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
