bug 1033 incomplete metadata specification

--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/namespace/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/namespace/package.html
@@ -7,5 +7,8 @@ For example:
 <pre>
 Import-Package: org.osgi.service.blueprint.namespace; version=&quot;[1.0,2.0)&quot;
 </pre>
+<p> This package provides the top-level interfaces needed for implementing a 
+	namespace handler.
+</p>
 </BODY>
 
