--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/context/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/context/package.html
@@ -1,11 +1,19 @@
 <!-- $Revision: 5654 $ -->
 <BODY>
-<p>Blueprint Context Package Version 1.0.
+<p>Blueprint Service Context Package Version 1.0.</p>
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
-For example:
+For example:</p>
 <pre>
 Import-Package: org.osgi.service.blueprint.context; version=&quot;[1.0,2.0)&quot;
 </pre>
+<p>
+	This package defines the primary interface to a module context, <code>ModuleContext</code>. An instance of this 
+	type is available inside a module context as an implicitly defined component with name "moduleContext".
+</p>
+<p>
+	This package also declares the supporting exception types, listener, and constants for working with a module
+	context.
+</p>
 </BODY>
 
