fix copyright years in notice comment

--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/reflect/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/reflect/package.html
@@ -14,7 +14,7 @@ Import-Package: org.osgi.service.blueprint.reflect; version=&quot;[1.0,2.0)&quot
 	<tr>
 		<th>Configuration Element</th><th>Corresponding Reflection Type(s)</th>
 	</tr>
-	<tr><td>component</td>LocalComponentMetadata, ComponentValue<td></td></tr>
+	<tr><td>component</td><td>LocalComponentMetadata, ComponentValue</td></tr>
 	<tr><td>reference</td><td>UnaryServiceReferenceComponentMetadata</td></tr>
 	<tr><td>ref-set,ref-list</td><td>CollectionBasedServiceReferenceComponentMetadata</td></tr>
 	<tr><td>service</td><td>ServiceExportComponentMetadata</td></tr>
