--- a/org.osgi.service.jdbc/src/org/osgi/service/jdbc/package.html
+++ b/org.osgi.service.jdbc/src/org/osgi/service/jdbc/package.html
@@ -1,4 +1,4 @@
-<!-- $Revision: 6204 $ -->
+<!-- $Revision$ -->
 <BODY>
 <p>JDBC Service Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
