Initial checkin of reorganized relection types

--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/context/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/context/package.html
@@ -8,11 +8,11 @@ For example:</p>
 Import-Package: org.osgi.service.blueprint.context; version=&quot;[1.0,2.0)&quot;
 </pre>
 <p>
-	This package defines the primary interface to a module context, <code>ModuleContext</code>. An instance of this 
-	type is available inside a module context as an implicitly defined component with name "moduleContext".
+	This package defines the primary interface to a blueprint context, <code>BlueprintContext</code>. An instance of this
+	type is available inside a blueprint context as an implicitly defined component with name "blueprintContext".
 </p>
 <p>
-	This package also declares the supporting exception types, listener, and constants for working with a module
+	This package also declares the supporting exception types, listener, and constants for working with a blueprint
 	context.
 </p>
 </BODY>
