add more test to test manifest headers

--- a/org.osgi.test.cases.webcontainer/resources/tw3/WebContent/index.html
+++ b/org.osgi.test.cases.webcontainer/resources/tw3/WebContent/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>TestWar2</title>
+<title>TestWar3</title>
 </head>
 <body>
-This is TestMetadataComplete.
+This is TestWar3.
 
 <P><A href="PostConstructPreDestroyServlet1">PostConstructPreDestroyServlet1</A><BR>
 <A href="PostConstructPreDestroyServlet2">PostConstructPreDestroyServlet2</A><BR>
