add a test servlet and test files to test Bundle-Classpath header

--- a/org.osgi.test.cases.webcontainer/resources/tw5/WebContent/index.html
+++ b/org.osgi.test.cases.webcontainer/resources/tw5/WebContent/index.html
@@ -6,6 +6,7 @@
 This is TestWar5.
 
 <P><A href="BundleTestServlet">/BundleTestServlet</A><BR>
+<A href="ClasspathTestServlet">/ClasspathTestServlet</A><BR>
 </P>
 </body>
 </html>
