--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/container/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/container/package.html
@@ -1,19 +1,21 @@
 <!-- $Revision: 5654 $ -->
 <BODY>
-<p>Blueprint Service Context Package Version 1.0.</p>
+<p>Blueprint Service Container Package Version 1.0.</p>
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:</p>
 <pre>
-Import-Package: org.osgi.service.blueprint.context; version=&quot;[1.0,2.0)&quot;
+Import-Package: org.osgi.service.blueprint.container; version=&quot;[1.0,2.0)&quot;
 </pre>
 <p>
-	This package defines the primary interface to a blueprint context, <code>BlueprintContext</code>. An instance of this
-	type is available inside a blueprint context as an implicitly defined component with name "blueprintContext".
+	This package defines the primary interface to a blueprint container,
+	<code>BlueprintContainer</code>. An instance of this type is available
+        inside a blueprint context as an implicitly defined component with name
+        "blueprintContainer".
 </p>
 <p>
 	This package also declares the supporting exception types, listener, and constants for working with a blueprint
-	context.
+	container.
 </p>
 </BODY>
 
