add some test cases to test rfc 142 work with rfc 66

--- a/org.osgi.test.cases.webcontainer/resources/tw5/WebContent/index.html
+++ b/org.osgi.test.cases.webcontainer/resources/tw5/WebContent/index.html
@@ -7,6 +7,7 @@ This is TestWar5.
 
 <P><A href="BundleTestServlet">/BundleTestServlet</A><BR>
 <A href="ClasspathTestServlet">/ClasspathTestServlet</A><BR>
+<A href="JNDITestServlet">/JNDITestServlet</A><BR>
 </P>
 </body>
 </html>
