fix companion code build to set bundle license header to Apache license use simple version number (w/o build qualifier) in description

--- a/osgi.companion/legal/about-ri.html
+++ b/osgi.companion/legal/about-ri.html
@@ -7,7 +7,7 @@
 <body lang="EN-US">
 <h2>About This Content</h2>
 
-<p>July 9, 2006</p>	
+<p>${tstamp;d MMMM yyyy}</p>	
 
 <p>OSGi Reference Implementations</p>
 
@@ -48,6 +48,5 @@ Java&trade; is a trademark,
 registered trademark, or service mark of Sun Microsystems, Inc. in the US and other countries. 
 All other trademarks, registered trademarks, or
 service marks used in the Content are the property of their respective owners and are hereby recognized.</p>
-<p style="font-height:6;color:grey"><i>Generated ${DATE}, versions ${core.release.version}/${cmpn.release.version}/${mobile.release.version}</i></p>
 </body>
 </html>
