--- a/osgi.companion/legal/about.html
+++ b/osgi.companion/legal/about.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
-<!-- $Date: 2007-08-10 03:17:58 +0200 (Fri, 10 Aug 2007) $ -->
 <html>
 <head>
 <title>About</title>
@@ -9,14 +8,13 @@
 <h2>About This Content</h2>
  
 <h3>Copyright</h3>
-<p>Copyright (c) 2000, 2005</p>
+<p>${copyright.html}</p>
 
 <p>OSGi Alliance<br/>
 Bishop Ranch 6<br/>
 2400 Camino Ramon, Suite 375<br/>
 San Ramon, CA 94583 USA
 </p>
-<p>All Rights Reserved.</p>
 
 <h3>License</h3>
 <p>The OSGi Alliance makes available all content in this jar (&quot;Work&quot;).  Unless otherwise indicated below, the Work is provided to you under the terms and conditions of the
