--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/reflect/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/reflect/package.html
@@ -1,4 +1,5 @@
-<!-- $Revision: 5654 $ -->
+<!-- $Revision$ -->
+<BODY>
 <p>Blueprint Reflection Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
@@ -9,4 +10,5 @@ Import-Package: org.osgi.service.blueprint.reflect; version=&quot;[1.0,2.0)&quot
 <p> This package provides a reflection-based view of the configuration information for a given
 	Blueprint Container.
 </p>
+</BODY>
 
