--- a/org.osgi.service.blueprint/src/org/osgi/service/blueprint/container/package.html
+++ b/org.osgi.service.blueprint/src/org/osgi/service/blueprint/container/package.html
@@ -11,7 +11,7 @@ Import-Package: org.osgi.service.blueprint.container; version=&quot;[1.0,2.0)&qu
 	This package defines the primary interface to a Blueprint Container,
 	<code>BlueprintContainer</code>. An instance of this type is available
         inside a Blueprint Container as an implicitly defined component with the name
-        "blueprintContainer".
+        &quot;blueprintContainer&quot;.
 </p>
 <p>
 	This package also declares the supporting exception types, listener, and constants for working with a Blueprint
