--- a/org.osgi.service.composite/src/org/osgi/service/composite/package.html
+++ b/org.osgi.service.composite/src/org/osgi/service/composite/package.html
@@ -1,11 +1,11 @@
 <!-- $Revision$ -->
 <BODY>
-<p>Framework service Package Version 1.0.
+<p>Composite Admin service Package Version 1.0.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.framework;version=&quot;[1.0,2.0)&quot;
+Import-Package: org.osgi.service.composite;version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
 
