--- a/org.osgi.jmx/src/org/osgi/jmx/service/cm/package.html
+++ b/org.osgi.jmx/src/org/osgi/jmx/service/cm/package.html
@@ -1,11 +1,11 @@
-<!-- $Revision$ -->
+<!-- $Revision: 6865 $ -->
 <BODY>
-<p>OSGi JMX Configuration Admin Package Version 1.0.</p>
+<p>OSGi JMX CM Package Version 1.3.</p>
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:</p>
 <pre>
-Import-Package: org.osgi.jmx.cm; version=&quot;[1.0,2.0)&quot;
+Import-Package: org.osgi.jmx.service.cm; version=&quot;[1.3,2.0)&quot;
 </pre>
 </BODY>
 
