change TODO to ### so we find it better in the spec add some formal types to remove compiler warnings set missing svn properties add @version javadoc tags format code

--- a/org.osgi.jmx/src/org/osgi/jmx/framework/package.html
+++ b/org.osgi.jmx/src/org/osgi/jmx/framework/package.html
@@ -1,4 +1,4 @@
-<!-- $Revision: 6865 $ -->
+<!-- $Revision$ -->
 <BODY>
 <p>OSGi JMX Framework Package Version 1.5.</p>
 <p>Bundles wishing to use this package must list the package
