--- a/org.osgi.jmx/src/org/osgi/jmx/service/useradmin/package.html
+++ b/org.osgi.jmx/src/org/osgi/jmx/service/useradmin/package.html
@@ -1,4 +1,4 @@
-<!-- $Revision: 6865 $ -->
+<!-- $Revision$ -->
 <BODY>
 <p>OSGi JMX User Admin Package Version 1.1.</p>
 <p>Bundles wishing to use this package must list the package
