--- a/org.osgi.service.jpa/src/org/osgi/service/jpa/package.html
+++ b/org.osgi.service.jpa/src/org/osgi/service/jpa/package.html
@@ -5,6 +5,6 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.jpa; version=&quot;[1.0,2.0)&quot;
+Import-Package: org.osgi.service.jpa; version=&quot;[1.0,2.0]&quot;
 </pre>
 </BODY>
