New org.osgi.framework.wiring package to replace org.osgi.service.packageadmin.
packageadmin is marked deprecated.

--- a/org.osgi.service.packageadmin/src/org/osgi/service/packageadmin/package.html
+++ b/org.osgi.service.packageadmin/src/org/osgi/service/packageadmin/package.html
@@ -1,6 +1,8 @@
 <!-- $Id$ -->
 <BODY>
 <p>Package Admin Package Version 1.2.
+<p>This package is deprecated and has been replaced by the
+<code>org.osgi.framework.wiring</code> package.
 <p>Bundles wishing to use this package must list the package
 in the Import-Package header of the bundle's manifest.
 For example:
